productizing: updated product.ini to check for JVM 1.7
X-Committed-on-Branch: omnetpp-4.x